fix: inconsistent img sizes on mobile

--- a/src/styles/home/home.css
+++ b/src/styles/home/home.css
@@ -84,10 +84,7 @@
       width: auto;
       gap: 10px 10px;
     }
-    .items-line-img {
-      width: 40vw;
-      height: 40vw;
-    }
+    
     .category-product-title {
       width: 100%;
     }
